Fixed overflow when items was < 4, scroll bar was hidden

--- a/src/App.scss
+++ b/src/App.scss
@@ -31,7 +31,6 @@ body {
     flex-direction: row;
     align-items: baseline;
     max-height: 100vh;
-    overflow: hidden;
   }
 
   h2 {
